Wed Jun 25 11:53:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * DAnCE/TargetManager/CmpClient.cpp:

          Remove redundant "" 3rd parameter (orbID) from ORB_init() calls.

Tue Jun 24 12:23:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tools/Config_Handlers/test.cpp:
        * tools/Config_Handlers/RT-CCM/test.cpp:
        * tools/Config_Handlers/Package_Handlers/test.cpp:
        * tools/Config_Handlers/CIAO_Events/test.cpp:
        * tests/Bug_2130_Regression/SEC_CheckPoint/controller.cpp:
        * DAnCE/TargetManager/CmpClient.cpp:
        * docs/tutorials/Quoter/Simple/Broker/StockBrokerDriver.cpp:
        * docs/tutorials/Quoter/Simple/Distributor/StockDistributorDriver.cpp:
        * performance-tests/mico/mico-thrput-st/server.cc:
        * performance-tests/mico/mico-thrput-st/client.cc:

          Fix fuzz errors incorrect ACE_TMAIN/main use.

Mon Jun 23 13:55:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tools/IDL3_TO_IDL2/IDL3_TO_IDL2.mpc:

          Backed out change, this is not the reason.

Fri Jun 20 08:50:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tools/IDL3_TO_IDL2/IDL3_TO_IDL2.mpc:

          Added missing source dependancy.

Thu Jun 19 14:11:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * DAnCE/NodeApplication/NodeApplication_Core.cpp:
        * DAnCE/NodeManager/Node_Manager.cpp:
        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
        * DAnCE/RepositoryManager/RMadmin.cpp:
        * DAnCE/StaticConfigurator/StaticDAnCEParser.cpp:
        * docs/tutorials/Quoter/Simple/Broker/StockBrokerDriver.cpp:
        * docs/tutorials/Quoter/Simple/Distributor/StockDistributorDriver.cpp:
        * examples/BasicSP/EC/client.cpp:
        * examples/BasicSP/EC/controller.cpp:
        * examples/Display/RateGen/controller.cpp:
        * examples/Hello/Sender/starter.cpp:
        * examples/Null_Component/StaticDAnCEApp.cpp: